# eidocs

./: .gitignore  README.md  pyproject.toml  requirements-rag.txt
deploy/: README.md  install_immutable_release.sh
deploy/systemd/: eidocs-prune.service  eidocs-prune.timer  eidocs-worker.service  eidocs-worker.timer
eidocs/: __init__.py  audit.py  cli.py  eimemory_sink.py  errors.py  ids.py  jobs.py  rag_worker.py  schema.py  security.py  service.py
eidocs/adapters/: __init__.py  raganything_adapter.py
eidocs/index/: __init__.py  local_jsonl.py
eidocs/parsers/: __init__.py  base.py  fallback.py  rag_subprocess.py
integrations/openclaw/eidocs-tools/: index.js  openclaw.plugin.json  package.json
scripts/: eidocs
tests/: test_fallback_parser.py  test_optional_raganything.py  test_rag_status.py  test_rag_subprocess_parser.py  test_schema.py  test_security.py  test_service_index_jobs.py  test_sibling_domain_import_boundaries.py
